# BUFF_V2

./: README.md
buff_marker/: CMakeLists.txt  package.xml
buff_marker/include/buff_marker/: EulerAngle.h  buff.h
buff_marker/src/: buff.cpp  buff_node.cpp  getAngle.cpp  targetTo.cpp  test.cpp
devel/: .catkin  .rosinstall  setup.sh
devel/include/sagitari_debug/: sagitari_img_debug.h
devel/include/uart_process_2/: uart_receive.h  uart_send.h
devel/lib/camera_file/: camera_file_node
devel/lib/camera_pkg_daheng/: camera_pkg_daheng_node
devel/lib/camera_pkg_dahua/: camera_pkg_dahua_node
devel/lib/camera_recorder/: camera_recorder_node
devel/lib/camera_usb_v4l/: camera_usb_v4l_node
devel/lib/pkgconfig/: buff.pc  camera_file.pc  camera_pkg_daheng.pc  camera_pkg_dahua.pc  camera_pkg_mindvision.pc  camera_recorder.pc  camera_usb_v4l.pc  coord_solver.pc  sagitari_debug.pc  uart_process_2.pc
devel/lib/python3/dist-packages/sagitari_debug/msg/: __init__.py  _sagitari_img_debug.py
devel/lib/python3/dist-packages/uart_process_2/msg/: __init__.py  _uart_receive.py  _uart_send.py
devel/lib/sagitari_debug/: sagitari_debug_node
devel/lib/uart_process_2/: rm2020_uart_2stm32
devel/share/buff/cmake/: buffConfig.cmake
devel/share/camera_file/cmake/: camera_fileConfig.cmake
devel/share/camera_pkg_daheng/cmake/: camera_pkg_dahengConfig.cmake
devel/share/camera_pkg_dahua/cmake/: camera_pkg_dahuaConfig.cmake
devel/share/camera_pkg_mindvision/cmake/: camera_pkg_mindvisionConfig.cmake
devel/share/camera_recorder/cmake/: camera_recorderConfig.cmake
devel/share/camera_usb_v4l/cmake/: camera_usb_v4lConfig.cmake
devel/share/common-lisp/ros/sagitari_debug/msg/: _package.lisp  _package_sagitari_img_debug.lisp  sagitari_debug-msg.asd  sagitari_img_debug.lisp
devel/share/common-lisp/ros/uart_process_2/msg/: _package_uart_send.lisp  uart_send.lisp
devel/share/coord_solver/cmake/: coord_solverConfig.cmake
devel/share/gennodejs/ros/sagitari_debug/msg/: _index.js  sagitari_img_debug.js
devel/share/gennodejs/ros/uart_process_2/msg/: uart_send.js
devel/share/roseus/ros/sagitari_debug/: manifest.l
devel/share/roseus/ros/sagitari_debug/msg/: sagitari_img_debug.l
devel/share/roseus/ros/uart_process_2/: manifest.l
devel/share/roseus/ros/uart_process_2/msg/: uart_send.l
devel/share/sagitari_debug/cmake/: sagitari_debug-msg-extras.cmake  sagitari_debug-msg-paths.cmake  sagitari_debugConfig.cmake
devel/share/uart_process_2/cmake/: uart_process_2-msg-paths.cmake  uart_process_2Config.cmake
launch/: debug_buff.launch  infantry_buff.launch  sentinel.launch  sentinel_down.launch
src/: echo
src/buff/: CMakeLists.txt
src/buff/include/: buff.h  coord_solver.hpp
src/buff/launch/: debug_buff_launch.py
src/buff/src/: buff.cpp  buff_node.cpp  coord_solver.cpp  targetTo.cpp
src/camera_file/src/: camera_file_node.cpp
src/camera_pkg_dahua/src/: DahuaCamera_Get.cpp  get_fram.cpp  streamRetrieve.cpp
src/camera_recorder/src/: camera_recorder_node.cpp
src/camera_usb_v4l/: CMakeLists.txt
